--- a/Day 5 Assignment 3 (Omkar Nage).ipynb
+++ b/Day 5 Assignment 3 (Omkar Nage).ipynb
@@ -197,42 +197,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'DrDarshaningleALMLTrainer'"
+       "'DrDarshanIngleAIMLTrainer'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = \"Dr.Darshan ingle @AL-ML Trainer\"\n",
+    "a = \"Dr.Darshan Ingle @AI-ML Trainer\"\n",
     "\n",
     "b =[\".\",\" \",\"@\", \"-\"]\n",
     "\n",
     "for i in b:\n",
-    "    a = a.replace(i,\"\")\n",
+    "    a = a.replace(i,'')\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'drdarshaninglealmltrainer'"
+       "'drdarshaningleaimltrainer'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
